--- a/KeyLibrary/src/main/res/values/styles.xml
+++ b/KeyLibrary/src/main/res/values/styles.xml
@@ -11,7 +11,12 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
 
-
+    <style name="TransTheme" parent="AppTheme.Base">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+    </style>
 
     <style name="BaseDialogTrans" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item> <!--无边框-->
