--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/white</item>
     </style>
 
+    <style name="MineSplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@mipmap/bg</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+
 </resources>
