--- a/KeyLibrary/src/main/res/layout/edit_text_base.xml
+++ b/KeyLibrary/src/main/res/layout/edit_text_base.xml
@@ -27,7 +27,7 @@
         android:id="@+id/ed_content"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/edit_text_base_bg"
+        android:background="@drawable/edit_bg"
         android:clickable="true"
         android:enabled="true"
         android:focusable="true"
@@ -36,7 +36,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="25dp"
         android:paddingBottom="3dp"
-        android:textCursorDrawable="@drawable/edit_text_cursor_bg"
+        android:textCursorDrawable="@drawable/edit_cursor_bg"
         android:textSize="15sp"
         android:maxLines="1"
         android:minLines="1"
@@ -50,7 +50,7 @@
         android:id="@+id/delete_all"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:background="@mipmap/clear_edit_text"
+        android:background="@mipmap/clear"
         android:layout_marginRight="12dp"
         android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="@+id/ed_content"
