--- a/KeyLibrary/src/main/res/layout/activity_show_image.xml
+++ b/KeyLibrary/src/main/res/layout/activity_show_image.xml
@@ -12,8 +12,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="26dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:src="@mipmap/close"/>
 
     <com.tamsiree.rxui.view.scaleimage.RxScaleImageView
@@ -22,5 +22,63 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
+    <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/choose_root"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="13dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/camera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textSize="18sp"
+                android:text="@string/camera"
+                android:textColor="@color/black"
+                android:background="@drawable/drawable_take_photo_bg"
+                />
+
+            <TextView
+                android:id="@+id/album"
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textSize="18sp"
+                android:text="@string/album"
+                android:textColor="@color/black"
+                android:background="@drawable/drawable_take_photo_bg"
+                />
+        </LinearLayout>
+
+
+
+        <TextView
+            android:id="@+id/cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="13dp"
+            android:layout_marginRight="13dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="18sp"
+            android:text="@string/cancel"
+            android:textColor="@color/blue"
+            android:background="@drawable/drawable_take_photo_bg"
+            />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
