--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
     </style>
 
 
+    <style name="ToolbarTextColorStyle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textSize">@dimen/toolbar_text_size</item>
+    </style>
 </resources>
