--- a/app/src/main/res/layout/fragment_index_mine.xml
+++ b/app/src/main/res/layout/fragment_index_mine.xml
@@ -47,15 +47,18 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:paddingBottom="80dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
+
+
+            <LinearLayout
+                android:id="@+id/fun_root"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="MagicBook"
-                android:textSize="20sp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"/>
 
         </androidx.core.widget.NestedScrollView>
 
