--- a/KeyLibrary/src/main/res/values/attrs.xml
+++ b/KeyLibrary/src/main/res/values/attrs.xml
@@ -31,4 +31,9 @@
               <flag name="card" value="5"/>
         </attr>
     </declare-styleable>
+
+
+    <declare-styleable name="CustomEditTextView">
+        <attr name="custom_hint" format="string" />
+    </declare-styleable>
 </resources>
