--- a/app/src/main/res/layout/fragment_index_mine_book.xml
+++ b/app/src/main/res/layout/fragment_index_mine_book.xml
@@ -7,19 +7,31 @@
 
 
 
+
+
+
+
+
   <com.scwang.smartrefresh.layout.SmartRefreshLayout
       android:id="@+id/refresh"
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      android:layout_weight="1"
-      app:layout_constraintTop_toBottomOf="@+id/toolbar">
+      android:layout_weight="1">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
+
+    <com.key.magicbook.bookpage.PageWidget
+        android:visibility="gone"
+        android:id="@+id/bookpage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
