--- a/app/src/main/res/layout/item_book_mine.xml
+++ b/app/src/main/res/layout/item_book_mine.xml
@@ -12,7 +12,7 @@
         android:id="@+id/book_cover"
         android:layout_width="80dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/load_img_cover"
+        android:src="@mipmap/bg"
         android:layout_height="100dp"/>
 
 
