--- a/app/src/main/res/layout/fragment_index_book_city.xml
+++ b/app/src/main/res/layout/fragment_index_book_city.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_white_f2"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <androidx.appcompat.widget.Toolbar
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="20dp">
@@ -14,10 +17,17 @@
 
 
 
-    <TextView
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BookCity"/>
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/search"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      android:layout_marginRight="10dp"
+      android:layout_marginBottom="5dp"
+      android:src="@mipmap/search"
+      app:borderWidth="0dp"
+      android:backgroundTint="@color/blue"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
