--- a/app/src/main/res/layout/fragment_index_mine_book.xml
+++ b/app/src/main/res/layout/fragment_index_mine_book.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/background_white_f2"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-
-
 
 
 
@@ -15,8 +13,7 @@
   <com.scwang.smartrefresh.layout.SmartRefreshLayout
       android:id="@+id/refresh"
       android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:layout_weight="1">
+      android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
@@ -27,11 +24,6 @@
   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
-    <com.key.magicbook.bookpage.PageWidget
-        android:visibility="gone"
-        android:id="@+id/bookpage"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+
 
 </LinearLayout>
