--- a/KeyLibrary/src/main/res/values/styles.xml
+++ b/KeyLibrary/src/main/res/values/styles.xml
@@ -21,15 +21,25 @@
     <style name="BaseDialogTrans" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item> <!--无边框-->
         <item name="android:windowIsFloating">true</item><!--悬浮在父界面之上--> 
-        <item name="android:windowIsTranslucent">true</item><!--允许呈现半透明状态-->
+
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item><!--无标题-->
+        <item name="android:windowIsTranslucent">true</item><!--允许呈现半透明状态-->
         <item name="android:backgroundDimEnabled">true</item> <!-- 允许周围模糊 --> 
     </style>
 
     <style name="NormalDialogTheme" parent="BaseDialogTrans">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimAmount">0.6</item><!--设置模糊灰度-->
+    </style>
+
+
+
+    <style name="NormalDialogNoBGTheme" parent="BaseDialogTrans">
+        <item name="android:windowIsTranslucent">false</item><!--允许呈现半透明状态-->
+        <item name="android:backgroundDimEnabled">false</item> <!-- 允许周围模糊 --> 
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimAmount">0</item>
     </style>
 
 
