--- a/app/src/main/res/layout/item_loading.xml
+++ b/app/src/main/res/layout/item_loading.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/image"
-        android:gravity="center"
-        android:layout_gravity="center"
         android:background="@color/blue"
-        android:padding="10dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
+        android:paddingLeft="12dp"
+        android:paddingTop="12dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp" />
 </LinearLayout>
