--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:pile="http://schemas.android.com/tools"
     android:background="@color/background_white_f9"
     android:orientation="vertical">
 
@@ -13,6 +14,7 @@
         app:navigationIcon="@mipmap/back_black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 
 
     <Button
