--- a/app/src/main/res/layout/fragment_index_mine.xml
+++ b/app/src/main/res/layout/fragment_index_mine.xml
@@ -19,8 +19,8 @@
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:contentScrim="@color/blue"
+                android:theme="@style/ToolbarThemeWhite"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <FrameLayout
@@ -41,7 +41,6 @@
                     android:id="@+id/toolbar"
                     app:title="Name"
                     android:layout_width="match_parent"
-                    app:titleTextAppearance="@style/ToolbarTextColorStyle"
                     android:layout_height="?android:attr/actionBarSize"
                     app:layout_collapseMode="pin" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
