--- a/app/src/main/res/layout/item_book_search.xml
+++ b/app/src/main/res/layout/item_book_search.xml
@@ -35,10 +35,10 @@
         android:text="陈东"
         android:textSize="15sp"
         android:textColor="@color/black"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toRightOf="@+id/img"
-        app:layout_constraintTop_toTopOf="@+id/img"
-        app:layout_constraintBottom_toBottomOf="@+id/img"/>
+        app:layout_constraintTop_toBottomOf="@+id/name"/>
 
 
     <TextView
