--- a/app/src/main/res/layout/fragment_index_book_city.xml
+++ b/app/src/main/res/layout/fragment_index_book_city.xml
@@ -8,19 +8,82 @@
     android:orientation="horizontal">
 
 
-
-    <LinearLayout
-        android:id="@+id/pile"
+    <com.key.keylibrary.widget.CustomScrollView
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="@dimen/dp_10"
+        android:id="@+id/scroll"
+        android:scrollbars="none"
+        android:fillViewport="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.stone.pile.libs.PileLayout
-            android:padding="@dimen/dp_10"
-            android:id="@+id/pile_layout"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/pile"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            android:layout_height="wrap_content">
+            <com.stone.pile.libs.PileLayout
+                app:layout_constraintTop_toTopOf="parent"
+                android:padding="@dimen/dp_10"
+                android:id="@+id/pile_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <View
+                android:id="@+id/base_line"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toTopOf="@+id/pile_layout"
+                app:layout_constraintBottom_toBottomOf="@id/pile_layout"/>
+
+            <TextView
+                app:layout_constraintTop_toBottomOf="@+id/base_line"
+                android:layout_marginTop="46dp"
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="bookName"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:gravity="left"/>
+
+
+
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/name"
+                android:layout_margin="16dp"
+                android:id="@+id/intro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="4"
+                android:text="bookIntro"
+                android:textSize="14sp"
+                android:textColor="@color/black"
+                android:gravity="left"/>
+
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:overScrollMode="never"
+                android:layout_marginBottom="56dp"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@+id/intro"
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.key.keylibrary.widget.CustomScrollView>
+
+
 
 
 
