--- a/app/src/main/res/layout/item_city_book_banner.xml
+++ b/app/src/main/res/layout/item_city_book_banner.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.makeramen.roundedimageview.RoundedImageView
+    <ImageView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -12,20 +13,10 @@
         android:src="@mipmap/test_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        app:riv_corner_radius="5dp" />
+        android:scaleType="centerCrop" />
 
 
-    <TextView
-        android:id="@+id/name"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/image"
-        app:layout_constraintLeft_toLeftOf="@+id/image"
-        app:layout_constraintRight_toRightOf="@+id/image"
-        android:textSize="25sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
