--- a/KeyLibrary/src/main/res/values/colors.xml
+++ b/KeyLibrary/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="main">#ff7112</color>
     <color name="app_deep_gray">#fd383838</color>
     <color name="blue">#1296db</color>
+    <color name="blue_alpha">#D90F76AC</color>
     <color name="less_blue">#CC0B588F</color>
     <color name="black">#000000</color>
     <color name="divider">#f9f9f9</color>
