--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,55 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-
     <androidx.cardview.widget.CardView
-        android:layout_margin="26dp"
+        android:id="@+id/card_login"
+        android:layout_marginLeft="@dimen/dp_26"
+        android:layout_marginRight="@dimen/dp_26"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:rippleColor="@color/blue"
         app:cardElevation="8dp">
 
-        <LinearLayout
-            android:layout_margin="13dp"
-            android:padding="13dp"
-            android:gravity="center"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginLeft="@dimen/dp_13"
+            android:layout_marginRight="@dimen/dp_13"
+            android:paddingBottom="@dimen/dp_26"
+            android:paddingLeft="@dimen/dp_13"
+            android:paddingRight="@dimen/dp_13"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <com.key.keylibrary.widget.CustomEditTextView
-                android:id="@+id/account"
+
+
+            <LinearLayout
+                android:id="@+id/login_root"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:custom_hint="账号"/>
+                android:orientation="vertical">
 
 
-            <com.key.keylibrary.widget.CustomEditTextView
-                android:id="@+id/password"
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/account"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="账号"/>
+
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="密码"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/register_root"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:custom_hint="密码"/>
+                android:orientation="vertical">
 
 
-            <Button
-                android:layout_marginTop="13dp"
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:textSize="23sp"
-                android:textColor="@color/black"
-                android:id="@+id/login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="登录"/>
-        </LinearLayout>
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/register_account"
+                    android:layout_marginLeft="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="账号"/>
+
+
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/register_password"
+                    android:layout_marginLeft="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="密码"/>
+
+
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/register_confirm_password"
+                    android:layout_marginLeft="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="确认密码"/>
+
+                <com.key.keylibrary.widget.CustomEditTextView
+                    android:id="@+id/register_name"
+                    android:layout_marginLeft="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_13"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:custom_hint="昵称"/>
+
+            </LinearLayout>
+
+
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+
+
+
+    <Button
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/register"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:id="@+id/login"
+        android:text="登录"
+        android:background="@drawable/shape_blue_bg_alpha"
+        android:layout_marginBottom="@dimen/dp_50"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/login"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/register"
+        android:text="注册"
+        android:background="@drawable/shape_blue_bg_alpha"
+        android:layout_marginBottom="@dimen/dp_50"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
