--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -1,147 +1,279 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
+        android:id="@+id/book_root"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            app:navigationIcon="@mipmap/back_black"
+            android:background="@color/white_alpha"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_50"/>
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+        <com.key.keylibrary.widget.CustomScrollView
+            android:id="@+id/net"
+            android:layout_width="match_parent"
+            android:fillViewport="true"
+            android:layout_height="match_parent">
+
+
+            <LinearLayout
+                android:id="@+id/book_detail_root"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_margin="@dimen/dp_13"
+                    android:padding="@dimen/dp_13"
+                    android:background="@drawable/shape_white_bg_alpha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                    <ImageView
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:id="@+id/book_cover"
+                        android:layout_width="@dimen/dp_100"
+                        android:layout_height="@dimen/dp_120"/>
+                    <TextView
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/book_cover"
+                        android:id="@+id/name_pre"
+                        android:text="书名 ："
+                        android:textStyle="bold"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/name_pre"
+                        android:id="@+id/name"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        app:layout_constraintTop_toBottomOf="@+id/name_pre"
+                        app:layout_constraintLeft_toRightOf="@+id/book_cover"
+                        android:id="@+id/author_pre"
+                        android:text="作者 ："
+                        android:textStyle="bold"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                       app:layout_constraintTop_toBottomOf="@id/name_pre"
+                        app:layout_constraintLeft_toRightOf="@+id/author_pre"
+                        android:id="@+id/author"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <TextView
+                        app:layout_constraintLeft_toRightOf="@+id/book_cover"
+                        app:layout_constraintTop_toBottomOf="@id/author"
+                        android:text="最新章节 ："
+                        android:textStyle="bold"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:id="@+id/update_pre"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toBottomOf="@id/update_pre"
+                        app:layout_constraintLeft_toRightOf="@+id/book_cover"
+                        android:id="@+id/last_update_info_chapter"
+                        android:textSize="15sp"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_marginTop="3dp"
+                        app:layout_constraintTop_toBottomOf="@+id/last_update_info_chapter"
+                        app:layout_constraintLeft_toRightOf="@+id/book_cover"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:layout_marginLeft="@dimen/dp_16"
+                        android:id="@+id/last_update_info_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+
+                    <ImageView
+                        android:id="@+id/like"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="@dimen/dp_30"
+                        android:layout_height="@dimen/dp_30"
+                        android:src="@mipmap/book_un_like"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:background="@drawable/shape_white_bg_alpha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_13"
+                    android:padding="@dimen/dp_13"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/intro_pre"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:text="书本简介"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/intro"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/intro_pre"
+                        android:padding="@dimen/dp_16"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:visibility="gone"
+                    android:id="@+id/list"
+                    android:layout_margin="5dp"
+                    app:layout_constraintTop_toBottomOf="@+id/last_update_info_time"
+                    android:layout_width="match_parent"
+                    app:layout_constraintHorizontal_bias="1"
+                    android:layout_height="0dp"/>
+
+
+
+
+            </LinearLayout>
+
+
+        </com.key.keylibrary.widget.CustomScrollView>
+    </LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingTop="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/shape_white_bg_alpha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/collapsing_toolbar"
-            android:theme="@style/ToolbarThemeBlack"
-            app:contentScrim="@color/background_white_f2"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <LinearLayout
+            android:id="@+id/cache"
+            android:layout_width="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/read"
+            app:layout_constraintHorizontal_bias="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@mipmap/download"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-
-
-            <FrameLayout
-                android:id="@+id/icon_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/book_bg"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/test" />
-            </FrameLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                app:title="圣墟"
-                app:navigationIcon="@mipmap/back_black"
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                app:layout_collapseMode="pin">
-
-
-            </androidx.appcompat.widget.Toolbar>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/net"
-        android:layout_width="match_parent"
-        android:fillViewport="true"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_height="wrap_content"
+                android:text="下载"/>
+        </LinearLayout>
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/book_detail_root"
-            android:layout_margin="13dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/read"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/cache"
+            app:layout_constraintRight_toLeftOf="@+id/add"
+            app:layout_constraintHorizontal_bias="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
 
-            <TextView
+
+            <ImageView
+                android:id="@+id/img_read"
                 app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/author"
-                android:text="辰东"
-                android:textStyle="bold"
-                android:textSize="25sp"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                app:layout_constraintStart_toEndOf="parent"
-                android:layout_height="wrap_content"/>
-
-
-            <TextView
-                android:layout_marginTop="13dp"
-                app:layout_constraintTop_toBottomOf="@+id/author"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:id="@+id/last_update_info_chapter"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_marginTop="6dp"
-                app:layout_constraintTop_toBottomOf="@+id/last_update_info_chapter"
-                android:textSize="15sp"
-                android:textColor="@color/black"
-                android:id="@+id/last_update_info_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_margin="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/last_update_info_time"
-                app:layout_constraintBottom_toTopOf="@+id/read"
-                android:layout_width="match_parent"
-                app:layout_constraintHorizontal_bias="1"
-                android:layout_height="0dp"/>
-
-            <Button
-                android:id="@+id/cache"
-                android:text="下载"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/read"
-                app:layout_constraintHorizontal_bias="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-
-            <Button
-                android:id="@+id/read"
-                android:text="看一看"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/cache"
-                app:layout_constraintRight_toLeftOf="@+id/add"
-                app:layout_constraintHorizontal_bias="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-
-            <Button
-                android:id="@+id/add"
-                android:text="加书架"
-                android:textSize="18sp"
-                app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/read"
-                android:layout_width="0dp"
+                android:src="@mipmap/read_book_detail"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
+            <TextView
+                app:layout_constraintTop_toBottomOf="@+id/img_read"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_height="wrap_content"
+                android:text="看一看"/>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.core.widget.NestedScrollView>
 
+        <LinearLayout
+            android:id="@+id/add"
+            android:layout_width="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/read"
+            app:layout_constraintHorizontal_bias="1"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@mipmap/bookcase_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_height="wrap_content"
+                android:text="加书架"/>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
