--- a/app/src/main/res/layout/item_book_type_banner.xml
+++ b/app/src/main/res/layout/item_book_type_banner.xml
@@ -17,9 +17,16 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/banner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <ImageView
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/bg"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_180"/>
             <ImageView
                 android:layout_margin="@dimen/dp_5"
                 android:id="@+id/image"
