--- a/KeyLibrary/src/main/res/values/attrs.xml
+++ b/KeyLibrary/src/main/res/values/attrs.xml
@@ -37,4 +37,9 @@
         <attr name="custom_hint" format="string" />
     </declare-styleable>
 
+
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+    </declare-styleable>
 </resources>
