--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorYellow">#FFEC8B</color>
     <color name="white">#ffffffff</color>
+    <color name="white_alpha">#80FFFFFF</color>
+    <color name="read_bg">#F6F0F0</color>
     <color name="halfColorPrimary">#aa2C2C2C</color>
     <color name="black">#000000</color>
     <color name="red">#ffff0000</color>
