--- a/app/src/main/res/drawable/shape_bg_delete.xml
+++ b/app/src/main/res/drawable/shape_bg_delete.xml
@@ -5,8 +5,5 @@
        android:bottomLeftRadius="15dp"
        android:topRightRadius="15dp"
        android:bottomRightRadius="15dp"/>
-    <stroke android:width="0.5dp"
-        android:color="#8A8A8A"
-        />
-    <solid android:color="@color/red"/>
+    <solid android:color="@color/black"/>
 </shape>
