--- a/app/src/main/res/drawable/shape_bg_right_bottom.xml
+++ b/app/src/main/res/drawable/shape_bg_right_bottom.xml
@@ -3,5 +3,5 @@
    <corners
        android:topRightRadius="15dp"
        android:bottomRightRadius="15dp"/>
-    <solid android:color="@color/red"/>
+    <solid android:color="@color/black"/>
 </shape>
