--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -129,8 +129,7 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_width="@dimen/dp_30"
-                        android:layout_height="@dimen/dp_30"
-                        android:src="@mipmap/book_un_like"/>
+                        android:layout_height="@dimen/dp_30"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -267,6 +266,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/add_des"
                 android:layout_width="wrap_content"
                 android:textSize="15sp"
                 android:textStyle="bold"
