--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:pile="http://schemas.android.com/tools"
-    android:background="@color/background_white_f9"
+    android:background="@color/background_white_f2"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         app:title="设置"
+        android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
         app:navigationIcon="@mipmap/back_black"
         android:layout_width="match_parent"
@@ -17,9 +17,15 @@
 
 
 
-    <Button
+    <TextView
         android:layout_margin="13dp"
         android:id="@+id/quit"
+        android:textSize="20sp"
+        android:padding="@dimen/dp_13"
+        android:background="@drawable/shape_bg"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="退出登录"/>
