--- a/app/src/main/res/layout/fragment_index_mine_book.xml
+++ b/app/src/main/res/layout/fragment_index_mine_book.xml
@@ -7,11 +7,10 @@
     android:orientation="vertical">
 
 
-
-
-
   <com.scwang.smartrefresh.layout.SmartRefreshLayout
       android:id="@+id/refresh"
+      android:layout_marginTop="@dimen/dp_8"
+      android:paddingBottom="@dimen/dp_15"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -19,11 +18,9 @@
         android:id="@+id/list"
         android:overScrollMode="never"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
   </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
-
 
 
 </LinearLayout>
