--- a/app/src/main/res/layout/iitem_book_type_header.xml
+++ b/app/src/main/res/layout/iitem_book_type_header.xml
@@ -4,11 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-
-    <com.bigkoo.convenientbanner.ConvenientBanner
-        android:id="@+id/convenientBanner"
+    <com.zhpan.bannerview.BannerViewPager
+        android:id="@+id/bv_top"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_220"
-        app:canLoop="true"
-    />
+        android:layout_margin="10dp"
+        app:bvp_indicator_checked_color="@android:color/holo_red_dark"
+        app:bvp_indicator_normal_color="@android:color/darker_gray"
+
+        app:bvp_reveal_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_250"/>
 </LinearLayout>
