--- a/app/src/main/res/layout/item_book_search.xml
+++ b/app/src/main/res/layout/item_book_search.xml
@@ -9,6 +9,7 @@
         android:id="@+id/img"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="80dp"
         android:scaleType="center"
         android:layout_height="100dp"/>
@@ -24,7 +25,7 @@
         android:textColor="@color/black"
         android:layout_marginLeft="15dp"
         app:layout_constraintStart_toEndOf="@+id/img"
-        app:layout_constraintTop_toTopOf="@+id/img"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <TextView
@@ -34,21 +35,24 @@
         android:text="陈东"
         android:textSize="15sp"
         android:textColor="@color/black"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/dp_8"
         android:layout_marginLeft="15dp"
         app:layout_constraintLeft_toRightOf="@+id/img"
         app:layout_constraintTop_toBottomOf="@+id/name"/>
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        app:layout_constraintHorizontal_bias="0"
         android:layout_height="wrap_content"
         android:id="@+id/time"
-        android:text="2020/4/4"
+        android:maxLines="2"
+        android:layout_marginTop="@dimen/dp_5"
         android:textSize="15sp"
         android:textColor="@color/black"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintStart_toEndOf="@+id/img"
-        app:layout_constraintBottom_toBottomOf="@+id/img"/>
+        android:paddingLeft="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/img"
+        app:layout_constraintTop_toBottomOf="@id/author"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
