--- a/app/src/main/res/layout/item_like.xml
+++ b/app/src/main/res/layout/item_like.xml
@@ -9,9 +9,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="@drawable/shape_bg_delete"
-        android:layout_margin="@dimen/dp_13"
-        android:layout_height="wrap_content">
+        android:layout_margin="@dimen/dp_15"
+        android:layout_height="@dimen/dp_120">
         <TextView
+            android:paddingLeft="@dimen/dp_13"
+            android:paddingRight="@dimen/dp_13"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/slide"
@@ -19,6 +21,7 @@
             android:textSize="20sp"
             android:background="@drawable/shape_bg_right_bottom"
             android:textColor="@color/white"
+            android:orientation="vertical"
             android:text="删除"
             android:layout_width="@dimen/dp_50"
             android:layout_height="@dimen/dp_120"/>
@@ -27,18 +30,20 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/content"
+            android:padding="1dp"
             android:background="@drawable/shape_bg"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_120">
 
             <ImageView
+                android:layout_marginLeft="@dimen/dp_8"
                 android:id="@+id/img"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="@dimen/dp_80"
+                android:layout_width="80dp"
                 android:scaleType="center"
-                android:layout_height="@dimen/dp_100"/>
+                android:layout_height="100dp"/>
 
 
             <TextView
@@ -51,7 +56,7 @@
                 android:textColor="@color/black"
                 android:layout_marginLeft="15dp"
                 app:layout_constraintStart_toEndOf="@+id/img"
-                app:layout_constraintTop_toTopOf="@+id/img"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
 
             <TextView
@@ -61,22 +66,25 @@
                 android:text="陈东"
                 android:textSize="15sp"
                 android:textColor="@color/black"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/dp_8"
                 android:layout_marginLeft="15dp"
                 app:layout_constraintLeft_toRightOf="@+id/img"
                 app:layout_constraintTop_toBottomOf="@+id/name"/>
 
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                app:layout_constraintHorizontal_bias="0"
                 android:layout_height="wrap_content"
                 android:id="@+id/time"
-                android:text="2020/4/4"
+                android:maxLines="2"
+                android:layout_marginTop="@dimen/dp_5"
                 android:textSize="15sp"
                 android:textColor="@color/black"
-                android:layout_marginLeft="15dp"
-                app:layout_constraintStart_toEndOf="@+id/img"
-                app:layout_constraintBottom_toBottomOf="@+id/img"/>
+                android:paddingLeft="15dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/img"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
